# jupyterenv

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: jupyter_notebook_config.py  migrated
config/custom/: custom.css  custom.js
config/nbconfig/: notebook.json
