[tool.poetry]
name = "jupyterenv"
version = "0.1.0"
description = "Jupyter Notebook configuration"
authors = ["Martin Høy <martin@hoy.priv.no>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "*"
jupyter-contrib-nbextensions = "*"
jupyter_nbextensions_configurator = "*"
nbdime = "*"
jedi = "<0.18"  # jedi 0.18.0 breaks tab-completion. Remove when fixed
nbconvert = "<6.0"  # nbconvert 6.x replaced 'template_path' with 'template_paths' remove
                  # when fixed

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
